--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Unit 4, Part 2: HTML/CSS Practice</title>
-    <!-- Create and link a CSS file! -->
-  </head>
+    <link rel="stylesheet" href="resources/style.css">
+    </head>
   <body>
-    <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+    <header>
+      <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+      <p></p>
+    </header>
+    <div class="info">
+      <h2>My name is David</h2>
+      <img src="resources/Adriatic Blue-RY5-16,34,48-640-en_US.webp">
+      <h3>I (used) to drive a Dracula themed sports car for work because my boss was scared of his toy.</h3>
+    </div>
   </body>
 </html>
